fix: 전반적인 오류 다 고침

--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID=your_google_ios_client_id_here
 # EXPO_PUBLIC_API_BASE_URL=http://localhost:5000/api
 
 # For development on real device, use your computer's IP:
-EXPO_PUBLIC_API_BASE_URL=http://100.64.1.1:5000/api
+EXPO_PUBLIC_API_BASE_URL=http://icn.dreamsv.xyz:5000/api
